--- a/Actions/RAM Drive.lbaction/Contents/Info.plist
+++ b/Actions/RAM Drive.lbaction/Contents/Info.plist
@@ -30,6 +30,8 @@
 	<string>Enter size(clusters/Mb/Gb) of RAM Drive</string>
 	<key>LBDescription</key>
 	<dict>
+		<key>LBTwitter</key>
+		<string>@previewthenew</string>
 		<key>LBDownload</key>
 		<string>https://github.com/facetheheat</string>
 		<key>LBChangelog</key>
@@ -39,9 +41,9 @@
 		<key>LBAuthor</key>
 		<string>Pavel Miroshnichenko</string>
 		<key>LBEmail</key>
-		<string>facetheheat@icloud.com</string>
+		<string>pavel@miroshnichen.co</string>
 		<key>LBWebsite</key>
-		<string>https://github.com/facetheheat</string>
+		<string>http://pavel.miroshnichen.co</string>
 		<key>LBUpdate</key>
 		<string>https://github.com/facetheheat</string>
 	</dict>
