--- a/Actions/Text Expander Snippets.lbaction/Contents/Info.plist
+++ b/Actions/Text Expander Snippets.lbaction/Contents/Info.plist
@@ -41,6 +41,8 @@
 	</dict>
 	<key>LBDescription</key>
 	<dict>
+		<key>LBDownload</key>
+		<string>https://github.com/facetheheat</string>
 		<key>LBChangelog</key>
 		<string></string>
 		<key>LBSummary</key>
@@ -52,7 +54,7 @@
 		<key>LBEmail</key>
 		<string>pavel@miroshnichen.co</string>
 		<key>LBWebsite</key>
-		<string>https://github.com/facetheheat</string>
+		<string>http://pavel.miroshnichen.co</string>
 		<key>LBTwitter</key>
 		<string>@previewthenew</string>
 	</dict>
